tdf#133996 speed up opening of ODS with autofilter + conditional formatting

inline some hot methods, and use OUStringLiteral to avoid repeated
construction of an OUString, saves about 3%

Change-Id: I6d09ade4e08a94ed5dd49a8882e26bb5786409d5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/125873
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit bf74eb1d1623a51805f91a973bc9f726d14dd7a8)